bk_ida/gccida/g3/hard_reg_set_here_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2532:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2544:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v15) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2575:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2594:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v11) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2640:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v22) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2691:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v29) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2744:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v38 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v37) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/reload.c:2797:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v47 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v46) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/hard_reg_set_here_p/src/obj/reload.o] Error 1
